--- a/src/app/shared/components/SelectedNode/SelectedNode.component.html
+++ b/src/app/shared/components/SelectedNode/SelectedNode.component.html
@@ -3,6 +3,6 @@
         {{ selectedNodeType }}
     </div>
     <div class="App-selected-node-body" [ngSwitch]="selectedNodeType" >
-        <app-selected-closure *ngSwitchCase="'closure'" ></app-selected-closure>
+        <app-selected-closure *ngSwitchCase="'closure'" [closure]="selectedNode" ></app-selected-closure>
     </div>
 </div>
