--- a/src/app/shared/components/ChildVariable/ChildVariable.component.html
+++ b/src/app/shared/components/ChildVariable/ChildVariable.component.html
@@ -1,8 +1,11 @@
 <div class="app-child-variable" >
-    <div class="app-child-variable-name" >
+    <div class="app-child-variable-column" >
         {{ variable.label }}
     </div>
-    <div class="app-child-variable-value" >
-        {{ variable.value }}
+    <div class="app-child-variable-column" >
+        {{ variable.type }}
+    </div>
+    <div class="app-child-variable-column" >
+        {{ value }}
     </div>
 </div>
