--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,35 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+/* SCSS HEX */
+$bittersweet: #ff6f59ff;
+$dark-slate-gray: #254441ff;
+$zomp: #43aa8bff;
+$lavender-blush: #ffeaecff;
+$red-crayola: #ef3054ff;
+
+/* SCSS HSL */
+$bittersweet: hsla(8, 100%, 67%, 1);
+$dark-slate-gray: hsla(174, 30%, 21%, 1);
+$zomp: hsla(162, 43%, 46%, 1);
+$lavender-blush: hsla(354, 100%, 96%, 1);
+$red-crayola: hsla(349, 86%, 56%, 1);
+
+/* SCSS RGB */
+$bittersweet: rgba(255, 111, 89, 1);
+$dark-slate-gray: rgba(37, 68, 65, 1);
+$zomp: rgba(67, 170, 139, 1);
+$lavender-blush: rgba(255, 234, 236, 1);
+$red-crayola: rgba(239, 48, 84, 1);
+
+/* SCSS Gradient */
+$gradient-top: linear-gradient(0deg, #ff6f59ff, #254441ff, #43aa8bff, #ffeaecff, #ef3054ff);
+$gradient-right: linear-gradient(90deg, #ff6f59ff, #254441ff, #43aa8bff, #ffeaecff, #ef3054ff);
+$gradient-bottom: linear-gradient(180deg, #ff6f59ff, #254441ff, #43aa8bff, #ffeaecff, #ef3054ff);
+$gradient-left: linear-gradient(270deg, #ff6f59ff, #254441ff, #43aa8bff, #ffeaecff, #ef3054ff);
+$gradient-top-right: linear-gradient(45deg, #ff6f59ff, #254441ff, #43aa8bff, #ffeaecff, #ef3054ff);
+$gradient-bottom-right: linear-gradient(135deg, #ff6f59ff, #254441ff, #43aa8bff, #ffeaecff, #ef3054ff);
+$gradient-top-left: linear-gradient(225deg, #ff6f59ff, #254441ff, #43aa8bff, #ffeaecff, #ef3054ff);
+$gradient-bottom-left: linear-gradient(315deg, #ff6f59ff, #254441ff, #43aa8bff, #ffeaecff, #ef3054ff);
+$gradient-radial: radial-gradient(#ff6f59ff, #254441ff, #43aa8bff, #ffeaecff, #ef3054ff);
